# cuthberto-carlos

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: daily-predictions.yml  pages.yml
assets/: actual_results.json  team_colors.json
cuthberto-carlos/: data.py
cuthberto_carlos/: bivariate_poisson.py  data.py  graphics.py  json_io.py  model.py  model_moments.py  types.py
frontend/: README.md  index.html  package-lock.json  package.json  pages.ts  vite.config.ts
frontend/src/: App.tsx  flags.ts  main.tsx  styles.css  types.ts  useLiveResults.ts  usePolymarket.ts  utils.ts
frontend/src/components/: CompletedMatches.tsx  Countries.tsx  GroupStage.tsx  KnockoutBracket.tsx  KnockoutMatchCard.tsx  KnockoutMatchListRow.tsx  KnockoutScoreComparison.tsx  MatchCard.tsx  TeamFlag.tsx  (+7 more)
outputs/: live_factorial.json  moments_params.json  sync_factorial_final.json  taylor_filtering_minimize_params.json
scripts/: build_frontend_data.py  kelly_backtest.py  minimize_taylor_filtering.py  predict_future_matches.py  run_moments_filtering.py  run_taylor_filtering.py  train_moments.py  train_taylor_filtering.py  update_moments_filtering.py
scripts/smc/: .gitignore  PROBLEM_DESCRIPTION.md  README.md  fact_smc_diagnostics.ipynb  model_fact_smc.py  model_smc.py  process_data.py  smc.ipynb  smc_diagnostics.ipynb
tests/: test_bivariate_poisson.py  test_build_frontend_data.py  test_kelly_backtest.py  test_model.py  test_model_moments.py  test_taylor_differentiability.py  test_validate_frontend_data.py
(+756 files in other folders)
