[project]
name = "cuthberto-carlos"
version = "0.1.0"
description = "cuthbert predicts football matches"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cuthbert>=0.0.12",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "ty>=0.0.44",
]


[tool.ruff]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F821", "E402", "D104"]
"tests/**/*.py" = ["D"] # no docstring checking for tests
"cuthbertlib/resampling/**/*.py" = ["D102", "D103"] # resampling uses decorator for docstrings
[tool.ruff.lint]
extend-select = ["D"]
[tool.ruff.lint.pydocstyle]
convention = "google"

